Creo el panel izquierdo y derecho

--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,12 @@
     <body>
         <div class="container">
             <div class="header">
-                
             </div>
+            <div class="center-left">
+            </div>
+            <div class="center-rigth">
+            </div>
+
         </div>
     </body>
 </html>
