--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,8 @@
             </div>
             <div class="center-rigth">
             </div>
+            <div class="footer">
+            </div>
         </div>
     </body>
 </html>
