--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
     <body>
         <div class="container">
             <div class="header">
+                <a href="#"><img src="img/LogoCZ.png"></a>
             </div>
             <div class="center-left">
             </div>
