--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,17 @@
 </head>
     <body>
         <div class="container">
-            <div class="header">
-                <a href="#"><img src="img/LogoCZ.png"></a>
+            <div class="header">   
+                <div class="logo">
+                    <a href="#"><img src="img/LogoCZ.png"></a>
+                </div> 
+                <nav>
+                    <ul>
+                        <li>Jugadores</li>
+                        <li>Partidos</li>
+                        <li>Tabla</li>
+                    </ul>
+                </nav>      
             </div>
             <div class="center-left">
             </div>
